corrected the services.css and services-mq.css files for the stretch

--- a/css/services.css
+++ b/css/services.css
@@ -66,20 +66,22 @@ h1, h2, h3, h4, h5 {
 /* My code starts here */
 
 #wrapper {
-	width: 1024px;
+	/* width: 1024px; */
+	width: 90%;
 	margin: 0 auto;
 }
 
 header {
 	text-align: center; 
-	/* border-bottom: 1px solid #000; */
+	border-bottom: 1px solid #000;
+	padding-top: 60px;
 }
 
 header nav {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	align-items: center;
+	/* align-items: center; */
 	/* position: fixed; */
 	top: 0;
 	left: 0;
@@ -99,11 +101,11 @@ header nav {
 } */
 
 header nav a {
-	/* display: inline-block; */
+	display: inline-block;
 	color: #888;
 	text-decoration: none;
 	font-weight: 400;
-	padding: 30px;
+	padding: 20px;
 }
 
 /* nav a:hover {
@@ -136,8 +138,8 @@ header nav a {
 }
 
 .services-main-section div { 
-    /* display: flex;
-    flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     width: 475px;
     height: 225px;
     margin: 10px 0;
